# Sonic-Music-Recommendation-System

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOY.md  Dockerfile  README.md  decisions.md  pyproject.toml  requirements.txt
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml  deploy-report.yml
.streamlit/: config.toml
api/: main.py
app/: _shared.py  streamlit_app.py
app/views/: artist_radio.py  data.py  methodology.py  overview.py  recommendations.py  results.py
configs/: data_config.yaml
data/processed/lastfm360k/: item_ids.parquet  (+2 more)
docs/: phase_plan.md  problem_definition.md
docs/learning/: why_implicit_feedback.md
docs/specs/: autoresearch_mapping.md  eval_design.md  model_card.md  sparsity_fragility_investigation.md
docs/stakeholder/: index.md
notebooks/: 00_eda_interaction_matrix.ipynb  01_evaluation_harness.ipynb  02_als_first_run.ipynb  03_search_readout.ipynb  04_recommendation_explorer.ipynb  05_model_comparison.ipynb  06_content_cold_start.ipynb  07_deep_vs_simple.ipynb  08_scaling_to_360k.ipynb
outputs/experiments/: log.jsonl
outputs/reports/: eda_stats.json  results_summary.md
report/: _quarto.yml  _variables.yml  data.qmd  exploration.qmd  index.qmd  limitations.qmd  methodology.qmd  pivot.qmd  results.qmd  theme.scss
src/: __init__.py  als_model.py  cold_start.py  content.py  data_360k.py  data_loading.py  deep.py  exp_deep_360k.py  metrics.py  models.py  plotting.py  report_figures.py  rerank.py  serving.py  stats.py  utils.py
src/harness/: __init__.py  confirm_holdout.py  eval_core.py  make_split.py  program.md  run_search.py  run_session.py  search_config.py
tests/: test_als_model.py  test_api.py  test_cold_start.py  test_content.py  test_data_loading.py  test_deep.py  test_eval_core.py  test_metrics.py  test_models.py  test_rerank.py  test_serving.py  test_stats.py
