[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "music-recommender"
version = "1.0.0"
description = "Collaborative-filtering music recommender (Last.fm) with a disciplined, autoresearch-style hyperparameter search and a FastAPI service."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Chris" }]
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.13",
    "pyarrow>=14.0",
    "implicit>=0.7.2",
    "threadpoolctl>=3.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "jupyterlab>=4.0",
    "ipywidgets>=8.1",
]
# The Streamlit front-end app (app/) — the interactive portfolio demo.
app = [
    "streamlit>=1.40",
    "plotly>=5.20",
]
# The deep-learning experiment (Mult-VAE, notebook 07) — heavy, kept optional.
experiments = ["torch>=2.2"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["notebooks", "data", "outputs", ".venv*"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
# E402 (import not at top) is intentional: CLI entrypoints and the API pin BLAS
# env vars before importing numpy/implicit.
ignore = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]   # make `src` and `api` importable without setting PYTHONPATH
filterwarnings = [
    "ignore:.*OpenBLAS is configured.*:RuntimeWarning",
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
    "ignore:.*expects CSR input.*",
]
